server/src/antlr/generated/.antlr/pawnParser.java
// Generated from d:/test-pawn/src/antlr/generated/pawn.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pawnParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_PARENTHESIS=1, CLOSE_PARENTHESIS=2, CURLY_OPEN_BRACKET=3, CURLY_CLOSE_BRACKET=4, 
		SQUARE_OPEN_BRACKET=5, SQUARE_CLOSE_BRACKET=6, COMA=7, SEMI=8, ASSIGMENT=9, 
		ASSIGMENT_PLUS=10, ASSIGMENT_MINUS=11, ASSIGMENT_MULT=12, ASSIGMENT_DIV=13, 
		ASSIGMENT_REMAINDE=14, ASSIGMENT_AND=15, ASSIGMENT_OR=16, ASSIGMENT_XOR=17, 
		ASSIGMENT_RIGHT=18, ASSIGMENT_RIGHT_LOG=19, ASSIGMENT_LEFT=20, PLUS=21, 
		MINUS=22, MULTY=23, DIV=24, REMAINDE=25, INCREMENTS=26, DECREMENTS=27, 
		EQUAL=28, NOTEQUAL=29, LESS=30, LARGER=31, LESSEQ=32, LARGEREQ=33, QUESTION=34, 
		COLON=35, OR=36, AND=37, NOT=38, BIT_AND=39, BIT_OR=40, BIT_XOR=41, BIT_COMPLEMEN=42, 
		BIT_RIGHT=43, BIT_LEFT=44, BIT_RIGHT_LOG=45, PERIOD=46, PERIOD_FUNC=47, 
		ASSERT=48, EXIT=49, GOTO=50, SLEEP=51, STATE=52, RETURN=53, NEW=54, ENUM=55, 
		CONST=56, STATIC=57, STOCK=58, FORWARD=59, NATIVE=60, PUBLIC=61, OPERATOR=62, 
		IF=63, ELSE=64, SWITCH=65, CASE=66, DEFAULT=67, WHILE=68, FOR=69, DO=70, 
		CONTINUE=71, BREAK=72, CHAR=73, DEFINED=74, SIZEOF=75, TAGOF=76, DEFINE=77, 
		ELSEIF=78, EMIT=79, ENDIF=80, ENDINPUT=81, ENDSCRIPT=82, FILE=83, INCLUDE=84, 
		LINE=85, PRAGMA=86, SECTION=87, TRYINCLUDE=88, UNDEF=89, DYNAMIC=90, WARNING=91, 
		TRUE=92, FALSE=93, SHARPSTRING=94, STRING=95, IDENTIFIER=96, HEX=97, INTEGER=98, 
		FLOAT=99, Whitespace=100, Newline=101, BlockComment=102, LineComment=103, 
		ANGLEDSTRING=104;
	public static final int
		RULE_file = 0, RULE_declaration = 1, RULE_enum = 2, RULE_enumMember = 3, 
		RULE_enumIterator = 4, RULE_var_definition = 5, RULE_functionDecl = 6, 
		RULE_operatorOverload = 7, RULE_nativeAssigment = 8, RULE_tag = 9, RULE_variable = 10, 
		RULE_arrayIndex = 11, RULE_funcDeclModif = 12, RULE_funcModif = 13, RULE_statement = 14, 
		RULE_controlStatments = 15, RULE_assigment = 16, RULE_arrayInit = 17, 
		RULE_arrayInitMember = 18, RULE_assigments = 19, RULE_grouping = 20, RULE_constGrouping = 21, 
		RULE_expresion = 22, RULE_constExpresion = 23, RULE_ternarOperator = 24, 
		RULE_preOperators = 25, RULE_operation = 26, RULE_varOrLiteral = 27, RULE_declParams = 28, 
		RULE_ellipse = 29, RULE_reference = 30, RULE_varModifires = 31, RULE_rValue = 32, 
		RULE_constRValue = 33, RULE_sizeof = 34, RULE_number = 35, RULE_integer = 36, 
		RULE_float = 37, RULE_hex = 38, RULE_operator = 39, RULE_canBeOverloaded = 40, 
		RULE_arefmeticOperator = 41, RULE_logicOperator = 42, RULE_compareOperator = 43, 
		RULE_bitwiseOperator = 44, RULE_if_statement = 45, RULE_else_statement = 46, 
		RULE_switch = 47, RULE_case = 48, RULE_default = 49, RULE_case_list = 50, 
		RULE_range = 51, RULE_condition = 52, RULE_codeBlock = 53, RULE_return = 54, 
		RULE_cycles = 55, RULE_do = 56, RULE_while = 57, RULE_for = 58, RULE_cycleBody = 59, 
		RULE_cycleKeywords = 60, RULE_literal = 61, RULE_bool_const = 62, RULE_string = 63, 
		RULE_angledString = 64, RULE_functionCall = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "declaration", "enum", "enumMember", "enumIterator", "var_definition", 
			"functionDecl", "operatorOverload", "nativeAssigment", "tag", "variable", 
			"arrayIndex", "funcDeclModif", "funcModif", "statement", "controlStatments", 
			"assigment", "arrayInit", "arrayInitMember", "assigments", "grouping", 
			"constGrouping", "expresion", "constExpresion", "ternarOperator", "preOperators", 
			"operation", "varOrLiteral", "declParams", "ellipse", "reference", "varModifires", 
			"rValue", "constRValue", "sizeof", "number", "integer", "float", "hex", 
			"operator", "canBeOverloaded", "arefmeticOperator", "logicOperator", 
			"compareOperator", "bitwiseOperator", "if_statement", "else_statement", 
			"switch", "case", "default", "case_list", "range", "condition", "codeBlock", 
			"return", "cycles", "do", "while", "for", "cycleBody", "cycleKeywords", 
			"literal", "bool_const", "string", "angledString", "functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'='", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'>>='", 
			"'>>>='", "'<<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'?'", "':'", "'||'", "'&&'", 
			"'!'", "'&'", "'|'", "'^'", "'~'", "'>>'", "'<<'", "'>>>'", "'..'", "'...'", 
			"'assert'", "'exit'", "'goto'", "'sleep'", "'state'", "'return'", "'new'", 
			"'enum'", "'const'", "'static'", "'stock'", "'forward'", "'native'", 
			"'public'", "'operator'", "'if'", "'else'", "'switch'", "'case'", "'default'", 
			"'while'", "'for'", "'do'", "'continue'", "'break'", "'char'", "'defined'", 
			"'sizeof'", "'tagof'", "'define'", "'elseif'", "'emit'", "'endif'", "'endinput'", 
			"'endscript'", "'file'", "'include'", "'line'", "'pragma'", "'section'", 
			"'tryinclude'", "'undef'", "'dynamic'", "'warning'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "CURLY_OPEN_BRACKET", 
			"CURLY_CLOSE_BRACKET", "SQUARE_OPEN_BRACKET", "SQUARE_CLOSE_BRACKET", 
			"COMA", "SEMI", "ASSIGMENT", "ASSIGMENT_PLUS", "ASSIGMENT_MINUS", "ASSIGMENT_MULT", 
			"ASSIGMENT_DIV", "ASSIGMENT_REMAINDE", "ASSIGMENT_AND", "ASSIGMENT_OR", 
			"ASSIGMENT_XOR", "ASSIGMENT_RIGHT", "ASSIGMENT_RIGHT_LOG", "ASSIGMENT_LEFT", 
			"PLUS", "MINUS", "MULTY", "DIV", "REMAINDE", "INCREMENTS", "DECREMENTS", 
			"EQUAL", "NOTEQUAL", "LESS", "LARGER", "LESSEQ", "LARGEREQ", "QUESTION", 
			"COLON", "OR", "AND", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_COMPLEMEN", 
			"BIT_RIGHT", "BIT_LEFT", "BIT_RIGHT_LOG", "PERIOD", "PERIOD_FUNC", "ASSERT", 
			"EXIT", "GOTO", "SLEEP", "STATE", "RETURN", "NEW", "ENUM", "CONST", "STATIC", 
			"STOCK", "FORWARD", "NATIVE", "PUBLIC", "OPERATOR", "IF", "ELSE", "SWITCH", 
			"CASE", "DEFAULT", "WHILE", "FOR", "DO", "CONTINUE", "BREAK", "CHAR", 
			"DEFINED", "SIZEOF", "TAGOF", "DEFINE", "ELSEIF", "EMIT", "ENDIF", "ENDINPUT", 
			"ENDSCRIPT", "FILE", "INCLUDE", "LINE", "PRAGMA", "SECTION", "TRYINCLUDE", 
			"UNDEF", "DYNAMIC", "WARNING", "TRUE", "FALSE", "SHARPSTRING", "STRING", 
			"IDENTIFIER", "HEX", "INTEGER", "FLOAT", "Whitespace", "Newline", "BlockComment", 
			"LineComment", "ANGLEDSTRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pawn.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pawnParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pawnParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4593671619917905928L) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(132);
				declaration();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public OperatorOverloadContext operatorOverload() {
			return getRuleContext(OperatorOverloadContext.class,0);
		}
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(pawnParser.SEMI, 0); }
		public EnumContext enum_() {
			return getRuleContext(EnumContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CURLY_OPEN_BRACKET:
			case NEW:
			case CONST:
			case STATIC:
			case STOCK:
			case FORWARD:
			case NATIVE:
			case PUBLIC:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(140);
					functionDecl();
					}
					break;
				case 2:
					{
					setState(141);
					operatorOverload();
					}
					break;
				case 3:
					{
					setState(142);
					var_definition();
					setState(143);
					match(SEMI);
					}
					break;
				}
				}
				break;
			case ENUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				enum_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(pawnParser.ENUM, 0); }
		public TerminalNode CURLY_OPEN_BRACKET() { return getToken(pawnParser.CURLY_OPEN_BRACKET, 0); }
		public TerminalNode CURLY_CLOSE_BRACKET() { return getToken(pawnParser.CURLY_CLOSE_BRACKET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pawnParser.IDENTIFIER, 0); }
		public EnumIteratorContext enumIterator() {
			return getRuleContext(EnumIteratorContext.class,0);
		}
		public List<EnumMemberContext> enumMember() {
			return getRuleContexts(EnumMemberContext.class);
		}
		public EnumMemberContext enumMember(int i) {
			return getRuleContext(EnumMemberContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(pawnParser.SEMI, 0); }
		public List<TerminalNode> COMA() { return getTokens(pawnParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(pawnParser.COMA, i);
		}
		public EnumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum; }
	}

	public final EnumContext enum_() throws RecognitionException {
		EnumContext _localctx = new EnumContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_enum);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ENUM);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(151);
				match(IDENTIFIER);
				}
			}

			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_PARENTHESIS) {
				{
				setState(154);
				enumIterator();
				}
			}

			setState(157);
			match(CURLY_OPEN_BRACKET);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CURLY_OPEN_BRACKET || _la==IDENTIFIER) {
				{
				setState(158);
				enumMember();
				setState(163);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(159);
						match(COMA);
						setState(160);
						enumMember();
						}
						} 
					}
					setState(165);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(166);
					match(COMA);
					}
				}

				}
			}

			setState(171);
			match(CURLY_CLOSE_BRACKET);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(172);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumMemberContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ASSIGMENT() { return getToken(pawnParser.ASSIGMENT, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public EnumMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumMember; }
	}

	public final EnumMemberContext enumMember() throws RecognitionException {
		EnumMemberContext _localctx = new EnumMemberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_enumMember);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			variable();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGMENT) {
				{
				setState(176);
				match(ASSIGMENT);
				setState(177);
				expresion();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumIteratorContext extends ParserRuleContext {
		public TerminalNode OPEN_PARENTHESIS() { return getToken(pawnParser.OPEN_PARENTHESIS, 0); }
		public TerminalNode INTEGER() { return getToken(pawnParser.INTEGER, 0); }
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(pawnParser.CLOSE_PARENTHESIS, 0); }
		public TerminalNode ASSIGMENT_PLUS() { return getToken(pawnParser.ASSIGMENT_PLUS, 0); }
		public TerminalNode ASSIGMENT_MULT() { return getToken(pawnParser.ASSIGMENT_MULT, 0); }
		public TerminalNode ASSIGMENT_LEFT() { return getToken(pawnParser.ASSIGMENT_LEFT, 0); }
		public EnumIteratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumIterator; }
	}

	public final EnumIteratorContext enumIterator() throws RecognitionException {
		EnumIteratorContext _localctx = new EnumIteratorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumIterator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(OPEN_PARENTHESIS);
			setState(181);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1053696L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(182);
			match(INTEGER);
			setState(183);
			match(CLOSE_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<AssigmentContext> assigment() {
			return getRuleContexts(AssigmentContext.class);
		}
		public AssigmentContext assigment(int i) {
			return getRuleContext(AssigmentContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(pawnParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(pawnParser.COMA, i);
		}
		public TerminalNode NEW() { return getToken(pawnParser.NEW, 0); }
		public List<VarModifiresContext> varModifires() {
			return getRuleContexts(VarModifiresContext.class);
		}
		public VarModifiresContext varModifires(int i) {
			return getRuleContext(VarModifiresContext.class,i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEW:
				{
				{
				setState(185);
				match(NEW);
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2810246167479189504L) != 0)) {
					{
					{
					setState(186);
					varModifires();
					}
					}
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case CONST:
			case STATIC:
			case STOCK:
			case PUBLIC:
				{
				{
				setState(193); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(192);
					varModifires();
					}
					}
					setState(195); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2810246167479189504L) != 0) );
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(199);
				variable();
				}
				break;
			case 2:
				{
				setState(200);
				assigment();
				}
				break;
			}
			setState(210);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(203);
				match(COMA);
				setState(206);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(204);
					variable();
					}
					break;
				case 2:
					{
					setState(205);
					assigment();
					}
					break;
				}
				}
				}
				setState(212);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
